fixed some spacing

--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -180,6 +180,7 @@ hr {
 .comment-box {
     width: 90%;
     min-width: 400px;
+    max-width: 500px;
     padding: 20px 30px;
 }
 
